--- a/cmfeditions.po
+++ b/cmfeditions.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CMFEditions\n"
 "POT-Creation-Date: 2016-08-20 09:30+0000\n"
-"PO-Revision-Date: 2010-12-24 20:43+0200\n"
+"PO-Revision-Date: 2022-12-12 09:50+0300\n"
 "Last-Translator: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "Language-Team: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +30,7 @@ msgstr "Düzenlendi (WebDAV)"
 
 #: CMFEditions/profiles.zcml:12
 msgid "Extension profile for default CMFEditions setup."
-msgstr ""
+msgstr "Varsayılan CMFEditions ayarları için eklenti profili."
 
 #: CMFEditions/browser/diff.pt:65
 msgid "First revision"
@@ -47,7 +47,7 @@ msgstr "Başlangıç sürümü (WebDAV)"
 
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:228
 msgid "Preview is not available."
-msgstr "Nasıl görüneceğine bakılamıyor."
+msgstr "Önizleme yapılamıyor."
 
 #: CMFEditions/skins/CMFEditions/revertversion.py:36
 msgid "Reverted to revision ${version}"
@@ -82,12 +82,12 @@ msgstr "Dosya çok büyük olduğu için üzerinde sürümlendirme yapılamıyor
 #. Default: "Working Copy"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:58
 msgid "Working Copy"
-msgstr "Çalışma Kopyası"
+msgstr "Çalışma kopyası"
 
 #. Default: "as code"
 #: CMFEditions/browser/diff.pt:107
 msgid "as code"
-msgstr "kod halinde"
+msgstr "kod olarak"
 
 #. Default: "Save as new revision"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:186
@@ -172,12 +172,12 @@ msgstr "Açıklama"
 #. Default: "Tag Added"
 #: CMFEditions/skins/CMFEditions/diff_legend.pt:11
 msgid "label_diff_tag_added"
-msgstr "Takı Eklendi"
+msgstr "Takı eklendi"
 
 #. Default: "Tag Deleted"
 #: CMFEditions/skins/CMFEditions/diff_legend.pt:12
 msgid "label_diff_tag_deleted"
-msgstr "Takı Silindi"
+msgstr "Takı silindi"
 
 #. Default: "Versioning Enabled?"
 #: CMFEditions/skins/CMFEditions/versioning_config_form.pt:67
@@ -197,7 +197,7 @@ msgstr "${version} (${date})"
 #. Default: "Item Type"
 #: CMFEditions/skins/CMFEditions/versioning_config_form.pt:66
 msgid "label_item_type"
-msgstr "Öğe Tipi"
+msgstr "Öğe tipi"
 
 #. Default: "modifications from revision ${version_id}"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:69
@@ -212,7 +212,7 @@ msgstr "Yeni sürüm"
 #. Default: "Preview of Revision ${version_id}"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:201
 msgid "label_preview_version"
-msgstr "${version_id} sürümünün nasıl görüneceği"
+msgstr "${version_id} sürümünün önizlemesi"
 
 #. Default: "(jump down)"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:112
@@ -222,7 +222,7 @@ msgstr "(aşağıya atla)"
 #. Default: "(preview)"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:107
 msgid "label_preview_version_link"
-msgstr "(nasıl görüneceğine bak)"
+msgstr "(önizleme)"
 
 #. Default: "(previously reverted)"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:71
@@ -247,7 +247,7 @@ msgstr "sürümleri göster"
 #. Default: "Versioning Settings"
 #: CMFEditions/skins/CMFEditions/versioning_config_form.pt:29
 msgid "label_title_vers_config"
-msgstr "Sürümlendirme Ayarları"
+msgstr "Sürümlendirme ayarları"
 
 #. Default: "Update"
 #: CMFEditions/browser/diff.pt:87
@@ -282,7 +282,7 @@ msgstr "Politikalar"
 #. Default: "Recent Versions"
 #: CMFEditions/skins/CMFEditions/versions_history.pt:10
 msgid "label_versions"
-msgstr "Yakın Tarihli Sürümler"
+msgstr "Yakın tarihli sürümler"
 
 #. Default: "Revisions"
 #: CMFEditions/browser/diff.pt:64
@@ -292,7 +292,7 @@ msgstr "Sürümler"
 #. Default: "Actions"
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:46
 msgid "listingheader_actions"
-msgstr "İşlemler"
+msgstr "Eylemler"
 
 #. Default: "Comment"
 #: CMFEditions/skins/CMFEditions/versions_history.pt:21
@@ -304,7 +304,7 @@ msgstr "Yorum"
 #: CMFEditions/skins/CMFEditions/versions_history.pt:20
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:42
 msgid "listingheader_date_and_time"
-msgstr "Tarih ve Saat"
+msgstr "Tarih ve saat"
 
 #. Default: "Revision"
 #: CMFEditions/skins/CMFEditions/versions_history.pt:18
@@ -331,7 +331,7 @@ msgstr "Bu öğenin sürüm bilgisi yok."
 #. Default: "Versions History"
 #: CMFEditions/skins/CMFEditions/versions_history.pt:13
 msgid "summary_versions_history"
-msgstr "Sürüm Tarihçesi"
+msgstr "Sürüm tarihçesi"
 
 #: CMFEditions/browser/diff.py:35
 msgid "version ${version}"
@@ -340,4 +340,4 @@ msgstr "${version} sürümü"
 #. Default: "Revisions of \"${title}\""
 #: CMFEditions/skins/CMFEditions/versions_history_form.pt:24
 msgid "versions_of_title"
-msgstr "\"${title}\" Sürümleri"
+msgstr "\"${title}\" sürümleri"
