--- a/cmfplacefulworkflow.po
+++ b/cmfplacefulworkflow.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CMFPlacefulWorkflow\n"
 "POT-Creation-Date: 2019-03-27 18:18+0000\n"
-"PO-Revision-Date: 2011-07-21 17:57+0200\n"
+"PO-Revision-Date: 2022-11-13 23:00+0300\n"
 "Last-Translator: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "Language-Team: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 
 #: ./profiles.zcml
 msgid "Add in Plone the capability to change workflow chains for types in every object."
-msgstr "Plone'a her nesnede işakışı zincirlerini değiştirebilme yeteneği ekler."
+msgstr "Plone'a her nesnede iş akışı zincirlerini değiştirebilme yeteneği ekler."
 
 #: CMFPlacefulWorkflow/profiles.zcml:12
 msgid "Add in Plone the capability to change workflow chains for types in every object. Includes a dependency on core Plone types."
@@ -42,7 +42,7 @@ msgstr "Ayar değişikliklerinden vazgeçildi."
 
 #: CMFPlacefulWorkflow/browser/views.py:79
 msgid "Deleted Local Workflow Policy."
-msgstr "Yerel İşakışı Politikası silindi."
+msgstr "Yerel iş akışı politikası silindi."
 
 #: ./profiles/default/portal_placeful_workflow/intranet.xml
 msgid "Intranet"
@@ -50,11 +50,11 @@ msgstr "Intranet"
 
 #: CMFPlacefulWorkflow/browser/views.py:85
 msgid "Local Workflow Policy added."
-msgstr "Yerel İşakışı Politikası eklendi."
+msgstr "Yerel iş akışı politikası eklendi."
 
 #: CMFPlacefulWorkflow/browser/views.py:108
 msgid "No Policy selected."
-msgstr ""
+msgstr "Seçili politika yok."
 
 #: CMFPlacefulWorkflow/browser/views.py:43
 msgid "No config in this folder."
@@ -86,7 +86,7 @@ msgstr ""
 
 #: CMFPlacefulWorkflow/profiles.zcml:12
 msgid "Workflow Policy Support (CMFPlacefulWorkflow)"
-msgstr "İşakışı Politikası Desteği (CMFPlacefulWorkflow)"
+msgstr "İş akışı politikası desteği (CMFPlacefulWorkflow)"
 
 #: CMFPlacefulWorkflow/profiles.zcml:21
 msgid "Workflow Policy Support (CMFPlacefulWorkflow) - no core types dependency"
@@ -94,32 +94,31 @@ msgstr ""
 
 #: CMFPlacefulWorkflow/profiles.zcml:29
 msgid "Workflow Policy Support (CMFPlacefulWorkflow) [uninstall]"
-msgstr ""
+msgstr "İş akışı politikası desteği (CMFPlacefulWorkflow) [kaldır]"
 
 #: CMFPlacefulWorkflow/browser/views.py:25
 msgid "Workflow policy configuration added."
-msgstr "İşakışı politikası ayarları eklendi"
+msgstr "İş akışı politikası ayarları eklendi"
 
 #. Default: "You are viewing the root of your site. Local workflow configuration is only available in subfolders of your site."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:22
 msgid "You are viewing the root of your site. Local workflow configuration is only available in subfolders of your site."
-msgstr "Sitenizin tepe klasörüne bakıyorsunuz. Yerel işakışı ayarları yalnızca sitenizin altklasörlerinde yapılabilir."
+msgstr "Sitenizin tepe klasörüne bakıyorsunuz. Yerel iş akışı ayarları yalnızca sitenizin altklasörlerinde yapılabilir."
 
 #. Default: "Add Workflow policy's local configuration"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:45
 msgid "description_add_workflow_policy"
-msgstr "İşakışı politikasının yerel ayarlarını ekle"
+msgstr "İş akışı politikasının yerel ayarlarını ekle"
 
 #. Default: "Add a workflow policy's local configuration in the ${portal_type}"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:35
 msgid "description_add_workflow_policy_for_type"
-msgstr "${portal_type} tipine bir işakışı politikasının yerel ayarlarını ekle"
+msgstr "${portal_type} tipine bir iş akışı politikasının yerel ayarlarını ekle"
 
 #. Default: "Modify the workflows only below this Folder. If you want to modify the workflow of this Folder use 'For this Folder' section."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:117
-#, fuzzy
 msgid "description_below_this_folder"
-msgstr "Bu klasörün yalnızca altındaki işakışlarını değiştir. Bu klasörün işakışı politikasını değiştirmek istiyorsanız 'Bu Klasörde' seçeneğini seçin."
+msgstr "Bu klasörün yalnızca altındaki iş akışlarını değiştir. Bu klasörün kendi iş akışı politikasını değiştirmek istiyorsanız 'Bu klasör için' bölümünü kullanın."
 
 #. Default: "Choose a policy to copy when creating the new policy. You also can choose to start with an empty policy."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:124
@@ -128,14 +127,13 @@ msgstr "Yeni politikayı yaratırken kopyalanacak bir politika seçin. Boş bir 
 
 #. Default: "Modify the workflows of this folder and below. If you don't want to modify the workflow of this Folder use 'Below this Folder' section."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:66
-#, fuzzy
 msgid "description_in_this_folder"
-msgstr "Bu klasör ve altındaki işakışlarını değiştir. Bu klasörün işakışını değiştirmek istemiyorsanız 'Bu Klasörden Aşağıda' seçeneğini seçin."
+msgstr "Bu klasör ve altındaki iş akışlarını değiştir. Bu klasörün kendi iş akışını değiştirmek istemiyorsanız 'Bu klasörden aşağıda' bölümünü kullanın."
 
 #. Default: "Enter an id for the new workflow policy"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:106
 msgid "description_new_policy_id"
-msgstr "Yeni işakışı politikası için bir kimlik yazın"
+msgstr "Yeni iş akışı politikası için bir kimlik yazın"
 
 #. Default: "Update catalog security (update role mappings). Note that updating catalog security might be a very long operation if there are a lot of brains to be re-indexed. This operation can be done afterwards as a separate upgrade step."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:172
@@ -145,47 +143,47 @@ msgstr ""
 #. Default: "Custom workflow policy which maps content types to workflows."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:44
 msgid "description_workflow_custom_mapping"
-msgstr "İçerik tipleriyle işakışlarını eşleştiren özel işakışı politikası."
+msgstr "İçerik tipleriyle iş akışlarını eşleştiren özel iş akışı politikası."
 
 #. Default: "Set your workflow policies' local configuration for this folder and below."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:16
 msgid "description_workflow_policies"
-msgstr "Bu klasör ve altındakiler için işakışı politikalarınızın yerel ayarlarını düzenleyin."
+msgstr "Bu klasör ve altındakiler için iş akışı politikalarınızın yerel ayarlarını düzenleyin."
 
 #. Default: "Here you can create and configure your workflow policies. A policy modifies workflows for any items in or below a specific folder. To apply a policy you have to add a local workflow policy configuration to the desired folder using the 'policy' item in the 'state' drop-down menu."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:41
 msgid "description_workflow_policy_setup"
-msgstr "Burada yeni işakışı politikaları yaratabilir ve olan politikaları ayarlayabilirsiniz. Bir politika bulunulan klasörün içindeki ya da altındaki bütün öğelerin işakışlarını değiştirir. Bir klasöre politika uygulamak için o klasöre 'durum' menüsünden 'politika' seçeneğini seçerek bir yerel işakışı politikası eklemeniz gerekir."
+msgstr "Burada yeni iş akışı politikaları yaratabilir ve olan politikaları ayarlayabilirsiniz. Bir politika bulunulan klasörün içindeki ya da altındaki bütün öğelerin iş akışlarını değiştirir. Bir klasöre politika uygulamak için o klasöre 'durum' menüsünden 'politika' seçeneğini seçerek bir yerel iş akışı politikası eklemeniz gerekir."
 
 #. Default: "Workflow Policies"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:22
 msgid "heading_placeful_workflow"
-msgstr "İşakışı Politikaları"
+msgstr "İş akışı politikaları"
 
 #. Default: "Workflow policies' local configuration management"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:12
 msgid "heading_workflow_policies"
-msgstr "İşakışı politikalarının yerel ayarlarının yönetimi"
+msgstr "İş akışı politikalarının yerel ayarlarının yönetimi"
 
 #. Default: "Default workflow for content types."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:112
 msgid "help_default_workflow_for_types"
-msgstr "İçerik tipleri için varsayılan işakışı."
+msgstr "İçerik tipleri için varsayılan iş akışı."
 
 #. Default: "The default workflow policy."
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:107
 msgid "help_default_workflow_policy"
-msgstr "Varsayılan işakışı politikası."
+msgstr "Varsayılan iş akışı politikası."
 
 #. Default: "You can assign a workflow for all content types."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:138
 msgid "help_workflow_assign_all_types"
-msgstr "Bütün içerik tipleri için bir işakışı atayabilirsiniz."
+msgstr "Bütün içerik tipleri için bir iş akışı atayabilirsiniz."
 
 #. Default: "A brief description of the workflow policy."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:90
 msgid "help_workflow_policy_description"
-msgstr "İşakışı politikasının kısa bir tanımı."
+msgstr "İş akışı politikasının kısa bir tanımı."
 
 #. Default: "Add"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:145
@@ -195,17 +193,17 @@ msgstr "Ekle"
 #. Default: "Below this Folder"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:116
 msgid "label_below_this_folder"
-msgstr "Bu Klasörden Aşağıda"
+msgstr "Bu klasörden aşağıda"
 
 #. Default: "Default Policy"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:102
 msgid "label_default_policy"
-msgstr "Varsayılan Politika"
+msgstr "Varsayılan politika"
 
 #. Default: "Default Workflow"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:107
 msgid "label_default_workflow"
-msgstr "Varsayılan İşakışı"
+msgstr "Varsayılan iş akışı"
 
 #. Default: "Duplicate another policy"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:119
@@ -215,27 +213,27 @@ msgstr "Başka bir politikanın kopyasını oluştur"
 #. Default: "Global workflow"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:136
 msgid "label_duplicate_portal_workflow"
-msgstr "Genel işakışı"
+msgstr "Genel iş akışı"
 
 #. Default: "For this Folder"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:65
 msgid "label_in_this_folder"
-msgstr "Bu Klasörde"
+msgstr "Bu klasör için"
 
 #. Default: "Acquire workflow from above"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:158
 msgid "label_mapping_acquire_workflow"
-msgstr "Üstklasörün işakışını kullan"
+msgstr "Üst klasörün iş akışını kullan"
 
 #. Default: "Default workflow for the policy"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:165
 msgid "label_mapping_default_worflow"
-msgstr "Politika için varsayılan işakışı"
+msgstr "Politika için varsayılan iş akışı"
 
 #. Default: "No workflow"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:161
 msgid "label_mapping_no_workflow"
-msgstr "İşakışı yok"
+msgstr "İş akışı yok"
 
 #. Default: "New policy Id"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:100
@@ -255,7 +253,7 @@ msgstr "Seçilenleri sil"
 #. Default: "Up to Placeful Workflow"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:37
 msgid "label_up_to_placeful_workflow"
-msgstr "Yere Göre Işakışı formuna çık"
+msgstr "Yere göre iş akışı formuna çık"
 
 #. Default: "Update security"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:171
@@ -265,34 +263,34 @@ msgstr ""
 #. Default: "Workflows by type"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:133
 msgid "label_workflow_by_type"
-msgstr "Tiplere göre işakışları"
+msgstr "Tiplere göre iş akışları"
 
 #. Default: "Add a workflow policy"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:95
 msgid "legend_add_workflow_policy"
-msgstr "Bir işakışı politikası ekle"
+msgstr "Bir iş akışı politikası ekle"
 
 #. Default: "Workflow policies"
 #: CMFPlacefulWorkflow/browser/placeful_workflow_configuration.pt:61
 msgid "legend_publishing_details"
-msgstr "İşakışı politikaları"
+msgstr "İş akışı politikaları"
 
 #. Default: "Existing Workflow Policies"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:57
 msgid "legend_workflow_policies"
-msgstr "Var olan İşakışı Politikaları"
+msgstr "Var olan iş akışı politikaları"
 
 #. Default: "Workflow Policy Details"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:53
 msgid "legend_workflow_policy_details"
-msgstr "İşakışı Politikası Ayrıntıları"
+msgstr "İş akışı politikası ayrıntıları"
 
 #. Default: "Workflow to content type mapping."
 #: CMFPlacefulWorkflow/browser/prefs_workflow_policy_mapping.pt:142
 msgid "summary_workflow_type_mapping"
-msgstr "İşakışı ile içerik tipi eşleştirmesi."
+msgstr "İş akışı ile içerik tipi eşleştirmesi."
 
 #. Default: "Workflow Policies Setup"
 #: CMFPlacefulWorkflow/browser/prefs_workflow_localpolicies_form.pt:37
 msgid "title_workflow_policy_setup"
-msgstr "İşakışı Politikaları Ayarları"
+msgstr "İş akışı politikaları ayarları"
