--- a/plonelocales.po
+++ b/plonelocales.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
 "POT-Creation-Date: 2006-12-15 23:20+0000\n"
-"PO-Revision-Date: 2006-04-14 17:19+0200\n"
+"PO-Revision-Date: 2022-11-13 23:50+0300\n"
 "Last-Translator: H. Turgut Uyar <uyar@cs.itu.edu.tr>\n"
 "Language-Team: Türkçe <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -10,7 +10,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0\n"
 "Language-Code: tr\n"
-"Language-Name: English\n"
+"Language-Name: Türkçe\n"
 "Preferred-Encodings: utf-8 latin1\n"
 "Domain: DOMAIN\n"
 
