--- a/plone.po
+++ b/plone.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Plone\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI +ZONE\n"
-"PO-Revision-Date: 2022-12-16 15:45+0300\n"
+"PO-Revision-Date: 2022-12-23 13:46+0300\n"
 "Last-Translator: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "Language-Team: H. Turgut Uyar <uyar@itu.edu.tr>\n"
 "MIME-Version: 1.0\n"
@@ -2594,11 +2594,11 @@ msgstr ""
 
 #: plone.app.dexterity/plone/app/dexterity/browser/types.py:100
 msgid "Export Schema Models"
-msgstr ""
+msgstr "Şema modellerini dışarı aktar"
 
 #: plone.app.dexterity/plone/app/dexterity/browser/types.py:87
 msgid "Export Type Profiles"
-msgstr ""
+msgstr "Tip profillerini dışarı aktar"
 
 #: CMFPlone/interfaces/resources.py:39
 msgid "Export vars for shim"
@@ -3170,15 +3170,15 @@ msgstr "Resim işleme ayarları"
 
 #: CMFPlone/interfaces/controlpanel.py:667
 msgid "Image objects"
-msgstr ""
+msgstr "Resim nesneleri"
 
 #: CMFPlone/interfaces/controlpanel.py:1514
 msgid "Image quality at 2x"
-msgstr ""
+msgstr "2x ölçekte resim kalitesi"
 
 #: CMFPlone/interfaces/controlpanel.py:1525
 msgid "Image quality at 3x"
-msgstr ""
+msgstr "3x ölçekte resim kalitesi"
 
 #: plone.app.contenttypes/plone/app/contenttypes/profiles/default/types/Image.xml
 msgid "Images can be referenced in pages or displayed in an album."
@@ -3187,28 +3187,28 @@ msgstr "Resimler sayfalarda kullanılabilir ya da bir albümde gösterilebilir."
 #: plone.app.caching/plone/app/caching/browser/import.pt:113
 #: plone/app/theming/browser/controlpanel.pt:794
 msgid "Import"
-msgstr ""
+msgstr "İçeri aktar"
 
 #: plone.app.dexterity/plone/app/dexterity/browser/import_types.py:99
 msgid "Import Content Types"
-msgstr ""
+msgstr "İçerik tiplerini içeri aktar"
 
 #: plone.app.dexterity/plone/app/dexterity/browser/types_listing.pt:30
 msgid "Import Type Profiles&hellip;"
-msgstr ""
+msgstr "Tip profillerini içeri aktar&hellip;"
 
 #: plone.app.caching/plone/app/caching/browser/controlpanel.py:528
 msgid "Import complete."
-msgstr ""
+msgstr "İçeri aktarma tamamlandı."
 
 #: plone.app.contenttypes/plone/app/contenttypes/migration/atct_migrator.pt:36
 #: plone.app.contenttypes/plone/app/contenttypes/migration/custom_migration.pt:31
 msgid "Important"
-msgstr ""
+msgstr "Önemli"
 
 #: plone.app.dexterity/plone/app/dexterity/browser/import_types.py:124
 msgid "Imported successfully."
-msgstr ""
+msgstr "Başarıyla içeri aktarıldı."
 
 #: CMFPlone/interfaces/resources.py:65
 msgid "In case its a bundle we can have a condition to render it (it does not apply if the bundle is merged)."
@@ -4690,11 +4690,11 @@ msgstr "Lütfen kullanılacak bir öğe seçin."
 
 #: plone.app.dexterity/plone/app/dexterity/browser/types.py:92
 msgid "Please select types to export."
-msgstr ""
+msgstr "Lütfen dışarı aktarılacak tipleri seçin."
 
 #: plone.app.querystring/plone/app/querystring/profiles/default/registry.xml
 msgid "Please use YYYY/MM/DD."
-msgstr ""
+msgstr "Lütfen YYYY/AA/GG formatı kullanın."
 
 #: plone.app.dexterity/plone/app/dexterity/interfaces.py:30
 msgid "Please use only letters, numbers and the following characters: .-_"
@@ -6890,7 +6890,7 @@ msgstr "Tipin kopyası oluşturuldu."
 
 #: plone.app.dexterity/plone/app/dexterity/browser/import_types.py:33
 msgid "Type profiles archive file"
-msgstr ""
+msgstr "Tip profilleri arşiv dosyası"
 
 #: CMFPlone/controlpanel/browser/types.py:53
 msgid "Types Settings"
@@ -6902,11 +6902,11 @@ msgstr ""
 
 #: CMFPlone/controlpanel/browser/types.py:55
 msgid "Types settings"
-msgstr ""
+msgstr "Tip ayarları"
 
 #: CMFPlone/interfaces/controlpanel.py:1260
 msgid "Types that can be set as a default page"
-msgstr ""
+msgstr "Varsayılan sayfa olarak seçilebilecek tipler"
 
 #: CMFPlone/interfaces/controlpanel.py:1235
 msgid "Types which use the view action in listing views."
@@ -7549,7 +7549,7 @@ msgstr "Bir e-posta adresi yazmalısınız."
 
 #: plone.app.caching/plone/app/caching/browser/controlpanel.py:507
 msgid "You must select a profile to import."
-msgstr ""
+msgstr "İçeri aktarılacak bir profil seçmelisiniz."
 
 #: CMFPlone/skins/plone_scripts/folder_publish.cpy:19
 #: plone.app.content/plone/app/content/browser/content_status_history.py:129
@@ -9245,12 +9245,12 @@ msgstr "Geçerlilik sona erme tarihi"
 #. Default: "Export"
 #: plone.app.registry/plone/app/registry/browser/templates/records.pt:127
 msgid "export"
-msgstr ""
+msgstr "Dışarı aktar"
 
 #. Default: "Export Now"
 #: plone.app.registry/plone/app/registry/browser/templates/records.pt:132
 msgid "export_button"
-msgstr ""
+msgstr "Şimdi dışarı aktar"
 
 #. Default: "Visit external website"
 #: plone.app.event/plone/app/event/browser/event_summary.pt:113
@@ -10392,7 +10392,7 @@ msgstr ""
 #. Default: "Import Events from icalendar files."
 #: plone.app.event/plone/app/event/profiles/default/actions.xml
 msgid "help_ical_import"
-msgstr ""
+msgstr "icalendar dosyalarından içeri etkinlikler aktar."
 
 #. Default: "Click to disable the icalendar import feature on this context."
 #: plone.app.event/plone/app/event/profiles/default/actions.xml
@@ -11002,7 +11002,7 @@ msgstr ""
 #. Default: "Event Type"
 #: plone.app.event/plone/app/event/ical/importer.py:229
 msgid "ical_import_event_type_title"
-msgstr ""
+msgstr "Etkinlik tipi"
 
 #. Default: "Icalendar resource file, if no URL is given."
 #: plone.app.event/plone/app/event/ical/importer.py:248
@@ -11012,12 +11012,12 @@ msgstr ""
 #. Default: "Icalendar File"
 #: plone.app.event/plone/app/event/ical/importer.py:247
 msgid "ical_import_file_title"
-msgstr ""
+msgstr "icalendar dosyası"
 
 #. Default: "${num} events imported from ${filename}"
 #: plone.app.event/plone/app/event/ical/importer.py:348
 msgid "ical_import_imported"
-msgstr ""
+msgstr "${filename} dosyasından içeri ${num} etkinlik aktarıldı"
 
 #. Default: "Please provide either a icalendar ics file or a URL to a file."
 #: plone.app.event/plone/app/event/ical/importer.py:355
@@ -11032,7 +11032,7 @@ msgstr ""
 #. Default: "Synchronization Strategy"
 #: plone.app.event/plone/app/event/ical/importer.py:255
 msgid "ical_import_sync_strategy_title"
-msgstr ""
+msgstr "Senkronizasyon stratejisi"
 
 #. Default: "URL to an external icalendar resource file."
 #: plone.app.event/plone/app/event/ical/importer.py:240
@@ -11042,7 +11042,7 @@ msgstr ""
 #. Default: "Icalendar URL"
 #: plone.app.event/plone/app/event/ical/importer.py:239
 msgid "ical_import_url_title"
-msgstr ""
+msgstr "icalendar URL adresi"
 
 #. Default: "If all of the following conditions are met:"
 #: plone.app.contentrules/plone/app/contentrules/browser/templates/manage-elements.pt:39
@@ -11052,7 +11052,7 @@ msgstr "Şu koşulların hepsi sağlanıyorsa:"
 #. Default: "Image already uploaded:"
 #: plone.formwidget.namedfile/plone/formwidget/namedfile/image_input.pt:34
 msgid "image_already_uploaded"
-msgstr ""
+msgstr "Resim zaten yüklenmiş:"
 
 #. Default: "Enable automatic image captioning for images set in the richtext editor based on the description of images."
 #: CMFPlone/interfaces/controlpanel.py:1537
@@ -11082,12 +11082,12 @@ msgstr "Yerine yeni resim konsun"
 #. Default: "Import"
 #: plone.app.registry/plone/app/registry/browser/templates/records.pt:139
 msgid "import"
-msgstr ""
+msgstr "İçeri aktar"
 
 #. Default: "Import File"
 #: plone.app.registry/plone/app/registry/browser/templates/records.pt:147
 msgid "import_button"
-msgstr ""
+msgstr "Dosya içeri aktar"
 
 #: plone.app.textfield/plone/app/textfield/interfaces.py:33
 msgid "in characters"
@@ -11110,7 +11110,7 @@ msgstr "Paneliniz şu anda boş. \"düzenle\" sekmesine basarak kişisel portlet
 #. Default: "Initial version"
 #: plone.app.versioningbehavior/plone/app/versioningbehavior/subscribers.py:84
 msgid "initial_version_changeNote"
-msgstr ""
+msgstr "İlk sürüm"
 
 #: validation/validators/BaseValidators.py:19
 msgid "is not a decimal number."
@@ -11152,7 +11152,7 @@ msgstr ""
 #. Default: "Actions category"
 #: plone.app.portlets/plone/app/portlets/portlets/actions.py:35
 msgid "label_actions_category"
-msgstr ""
+msgstr "Eylemler kategorisi"
 
 #. Default: "Actions"
 #: plone.app.contentmenu/plone/app/contentmenu/menu.py:57
@@ -12253,7 +12253,7 @@ msgstr "İzin verilen tipler"
 #: plone.app.caching/plone/app/caching/browser/import.pt:21
 #: plone.app.caching/plone/app/caching/browser/purge.pt:21
 msgid "label_import"
-msgstr ""
+msgstr "İçeri aktarma ayarları"
 
 #. Default: "Include contained items"
 #: plone.app.content/plone/app/content/browser/contents/templates/properties.pt:60
@@ -14444,7 +14444,7 @@ msgstr ""
 #. Default: "Will export the entire registry into a single XML file."
 #: plone.app.registry/plone/app/registry/browser/templates/records.pt:128
 msgid "registry_export_text"
-msgstr ""
+msgstr "Bütün kayıt kütüğünü tek bir XML dosyası halinde dışarı aktaracak."
 
 #. Default: "reject"
 #: workflow transition defined in plone_workflow - title Reviewer rejects submission new state visible
@@ -15126,17 +15126,17 @@ msgstr "Değişmez metin portleti düzenle"
 #. Default: "Ical import"
 #: plone.app.event/plone/app/event/profiles/default/actions.xml
 msgid "title_ical_import"
-msgstr ""
+msgstr "ical'den içeri aktarma"
 
 #. Default: "Disable icalendar import"
 #: plone.app.event/plone/app/event/profiles/default/actions.xml
 msgid "title_ical_import_disable"
-msgstr ""
+msgstr "ical'den içeri aktarmayı kapat"
 
 #. Default: "Enable icalendar import"
 #: plone.app.event/plone/app/event/profiles/default/actions.xml
 msgid "title_ical_import_enable"
-msgstr ""
+msgstr "ical'den içeri aktarmayı aç"
 
 #. Default: "Language"
 #: plone/app/multilingual/browser/interfaces.py:54
@@ -15383,7 +15383,7 @@ msgstr "Girmekte sorun mu yaşıyorsunuz?"
 
 #: plone.app.dexterity/plone/app/dexterity/browser/import_types.py:65
 msgid "types.xml in archive is invalid."
-msgstr ""
+msgstr "Arşivdeki types.xml geçerli değil."
 
 #. Default: "Globally addable"
 #: CMFPlone/controlpanel/browser/types.pt:70
