--- a/plonefrontpage.po
+++ b/plonefrontpage.po
@@ -141,7 +141,7 @@ msgstr ""
 "<p class='discreet'>"
 "Beklediğiniz içeriğin yerine bu sayfayı görüyorsanız bu sitenin sahibi "
 "Plone'u yeni kurmuş demektir. Lütfen bu konuyla ilgili olarak PLONE TAKIMINA "
-"YA DA PLONE LİSTELERİNE DEĞİL site sahibine haber verin."
+"YA DA PLONE LİSTELERİNE DEĞİL, site sahibine haber verin."
 "</p>"
 ""
 "<h2>Başlarken</h2>"
@@ -152,7 +152,7 @@ msgstr ""
 ""
 "<ol>"
 "    <li>Yönetici kullanıcı (admin/manager) olarak sisteme girdiğinizden emin olun."
-"        <span class='discreet'>(Sağ üst köşede bir Site ayarları bağlantısı görüyor olmanız gerek.)</span></li>"
+"        <span class='discreet'>(Sağ üst köşede bir 'Site ayarları' bağlantısı görüyor olmanız gerek.)</span></li>"
 "    <li><a href='@@mail-controlpanel'>Posta sunucunuzu ayarlayın</a>. <span class='discreet'>(Kullanıcıları doğrulayabilmek ve parolaları baştan alabilmek için Plone'un geçerli bir SMTP sunucusuna gereksinimi vardır.)</span></li>"
 "    <li><a href='@@security-controlpanel'>Sitenizde ne tip güvenlik ayarları istediğinize karar verin</a>. <span class='discreet'>(Kimlerin katılabileceği, parola politikaları vs.)</span></li>"
 "</ol>"
@@ -187,8 +187,8 @@ msgstr ""
 "    <a href='@@content-controlpanel'>"
 "    Sitenizde farklı bir iş akışı kullanabilirsiniz.</a>"
 "    <span class='discreet'>(Varsayılan iş akışı web sitelerine göre"
-"    düşünülmüştür. Plone'u kapalı bir intranet olarak kullanmak"
-"    niyetindeyseniz uygun bir iş akışı seçmelisiniz.)</span>"
+"    düşünülmüştür. Plone'u kapalı bir intranet olarak kullanmayı"
+"    planlıyorsanız uygun bir iş akışı seçmelisiniz.)</span>"
 "    </li>"
 ""
 "    <li>"
