fix some fuzzy turkish translations

--- a/plone.po
+++ b/plone.po
@@ -8763,9 +8763,8 @@ msgstr ""
 
 #. Default: "You are logged in via HTTP authentication (i.e. the Zope Management Interface). In order to log out, you must:"
 #: CMFPlone/browser/login/templates/logged_out.pt:22
-#, fuzzy
 msgid "description_quit_to_log_out"
-msgstr "Siteye HTTP asıllaması kullanarak (yani Zope Yönetim Arayüzü üzerinden) girmişsiniz. Siteden çıkmak için:"
+msgstr "Siteye HTTP asıllaması kullanarak (örneğin Zope Yönetim Arayüzü üzerinden) girmişsiniz. Siteden çıkmak için:"
 
 #. Default: "Plone maintains a cache of certain pages and fragments of pages in memory to speed up rendering. Certain caching operations, when mapped, can be used to place entire pages into the RAM cache. Using the RAM cache may allow you to gain some speed (and reduce CPU usage), at the cost of using more memory. Note that the default RAM cache is shared among threads in the same Zope instance, but is not shared between Zope instances. Thus, if you are running a multi-instance ZEO setup, you may find it more efficient to segment your users using a front-end load balancer so that they always reach the same back-end instance. As an alternative, you can integrate a shared cache such as <em>memcached</em>. See the documentation for details."
 #: plone.app.caching/plone/app/caching/browser/controlpanel.pt:285
@@ -8930,14 +8929,13 @@ msgstr "Bilgisayarınız tarayıcınıza gidip gelen çerezleri engelleyen bir y
 
 #. Default: "Syndication enables you to syndicate this folder so it canbe synchronized from other web sites."
 #: CMFPlone/browser/syndication/views.py:84
-#, fuzzy
 msgid "description_syndication_properties"
-msgstr "İçerik aktarımı başka sitelerdeki klasörlerin bu klasörle senkronize edilebilmesini sağlar."
+msgstr "Sendikasyon bu klasörün başka sitelerden senkronize edilebilmesini sağlar."
 
 #. Default: "A test portlet"
 #: plone.app.portlets/plone/app/portlets/tests/profiles/testing/portlets.xml
 msgid "description_test_portlet"
-msgstr ""
+msgstr "Bir deneme portleti"
 
 #. Default: "e.g.: www.plone.de"
 #: plone.i18n/plone/i18n/interfaces.py:185
@@ -10699,19 +10697,16 @@ msgstr ""
 
 #. Default: "Find users whose email address contain"
 #: plone.app.users/plone/app/users/browser/membersearch.py:30
-#, fuzzy
 msgid "help_search_email"
 msgstr "E-posta adreslerinde şunun geçtiği kullanıcıları bul"
 
 #. Default: "Find users whose full names contain"
 #: plone.app.users/plone/app/users/browser/membersearch.py:37
-#, fuzzy
 msgid "help_search_fullname"
-msgstr "Tam adında bu değer geçen kullanıcıların listesini ver."
+msgstr "Tam isminde şunun geçtiği kullanıcıları bul."
 
 #. Default: "Find users whose login name contain"
 #: plone.app.users/plone/app/users/browser/membersearch.py:23
-#, fuzzy
 msgid "help_search_name"
 msgstr "Kullanıcı isminde şunun geçtiği kullanıcıları bul"
 
@@ -10742,9 +10737,8 @@ msgstr "Bu sayfa adresinin gönderileceği e-posta adresi."
 
 #. Default: "Please enter your e-mail address."
 #: CMFPlone/browser/interfaces.py:337
-#, fuzzy
 msgid "help_sender_from_address"
-msgstr "Lütfen e-posta adresinizi yazın"
+msgstr "Lütfen e-posta adresinizi yazın."
 
 #. Default: "Please enter your full name."
 #: CMFPlone/browser/interfaces.py:329
@@ -13480,9 +13474,8 @@ msgstr "Görsel editör"
 
 #. Default: "Management Interface"
 #: CMFPlone/browser/templates/plone-overview.pt:137
-#, fuzzy
 msgid "label_zmi_link"
-msgstr "Zope Yönetim Arayüzü"
+msgstr "Yönetim Arayüzü"
 
 #. Default: "&#151; low-level technical configuration."
 #: CMFPlone/browser/templates/plone-overview.pt:142
@@ -14801,9 +14794,8 @@ msgstr "Hiçbir öğe değiştirilmemiş."
 
 #. Default: "PIL is not installed properly, image scaling will not work."
 #: CMFPlone/controlpanel/browser/overview.pt:91
-#, fuzzy
 msgid "text_no_pil_installed"
-msgstr "Uyarı: PIL düzgün kurulmamış, resimler ölçeklenemeyecek."
+msgstr "PIL düzgün kurulmamış, resim ölçekleme çalışmayacak."
 
 #. Default: "Enter a group or user name to search for or click 'Show All'."
 #: CMFPlone/controlpanel/browser/usergroups_groupmembership.pt:274
@@ -15073,9 +15065,8 @@ msgstr "Önceki sürümle karşılaştır"
 
 #. Default: "Compare to current"
 #: plone.app.layout/plone/app/layout/viewlets/content_history.pt:67
-#, fuzzy
 msgid "title_compare_revision"
-msgstr "&middot; Şu anki sürümle karşılaştır"
+msgstr "Şu ankiyle karşılaştır"
 
 #. Default: "Configure which content types can be added here"
 #: plone.app.content/plone/app/content/browser/folderfactories.pt:29
