--- a/plone.po
+++ b/plone.po
@@ -6515,25 +6515,25 @@ msgstr ""
 
 #: plone.app.contentrules/plone/app/contentrules/browser/templates/manage-elements.pt:122
 msgid "There is not any action performed by this rule. Click on Add button to setup an action."
-msgstr ""
+msgstr "Bu kuralda uygulanan eylem yok. Bir eylem ayarlamak için Ekle düğmesine asın."
 
 #: plone.app.contentrules/plone/app/contentrules/browser/templates/manage-elements.pt:46
 msgid "There is not any additional condition checked on this rule."
-msgstr ""
+msgstr "Bu kuralda denetlenen başka ek koşul yok."
 
 #: plone.app.contentrules/plone/app/contentrules/browser/templates/controlpanel.pt:32
 msgid "There was an error saving content rules."
-msgstr ""
+msgstr "İçerik kuralının kaydedilmesinde hata oldu."
 
 #: plone/app/theming/browser/controlpanel.py:234
 msgid "There were errors"
-msgstr ""
+msgstr "Bazı hatalar var"
 
 #: plone.app.caching/plone/app/caching/browser/controlpanel.py:310
 #: plone.app.users/plone/app/users/browser/membersearch.py:94
 #: plone.app.users/plone/app/users/browser/register.py:67
 msgid "There were errors."
-msgstr ""
+msgstr "Hatalar oldu."
 
 #: plone.app.caching/plone/app/caching/caching.zcml:51
 msgid "These are resources which can be cached 'forever'. Normally this means that if the object does change, its URL changes too."
@@ -14198,7 +14198,7 @@ msgstr ""
 #. Default: "Password reset successful, you are logged in now!"
 #: CMFPlone/browser/login/password_reset.py:119
 msgid "password_reset_successful"
-msgstr ""
+msgstr "Parola sıfırlaması başarılı, şu anda siteye girdiniz!"
 
 #: plone.formwidget.recurrence/plone/formwidget/recurrence/browser/i18n.py:127
 msgid "past_end_date"
